CCLE-4817 - fixing broken search block
* results are no longer truncated by footer - the page content is expanded
* updated for frontpage/block/browseby

--- a/blocks/ucla_search/styles.css
+++ b/blocks/ucla_search/styles.css
@@ -1,33 +1,1 @@
-/*@import "uclatheme";*/
-.pagelayout-frontpage .ucla-search .yui3-aclist {
-  position: relative;
-  display: inline-block; }
-
-.ucla-search:not(.frontpage-search):not(.course-search):not(.collab-search) {
-  margin-bottom: 8px; }
-  .ucla-search:not(.frontpage-search):not(.course-search):not(.collab-search) .yui3-aclist-content {
-    box-shadow: 0 0 0;
-    border: 0; }
-  .ucla-search:not(.frontpage-search):not(.course-search):not(.collab-search) .yui3-aclist-item-active {
-    /*background-color: darken($brand-primary, 10%);*/ }
-  .ucla-search:not(.frontpage-search):not(.course-search):not(.collab-search) .yui3-aclist-item-hover {
-    /*background-color: lighten($brand-primary, 30%);*/ }
-  .ucla-search:not(.frontpage-search):not(.course-search):not(.collab-search) #ucla-search-block.yui3-aclist-input {
-    /*@include border-radius(4px);*/ }
-  .ucla-search:not(.frontpage-search):not(.course-search):not(.collab-search) .input-group {
-    margin-top: 4px; }
-
-.ucla-search .btn {
-  border-top-left-radius: 0 !important;
-  border-bottom-left-radius: 0 !important; }
-
-.search-result .shortname {
-  font-weight: bold; }
-  .yui3-aclist-item-active.yui3-aclist-item-hover .search-result .shortname {
-    color: #444; }
-.search-result .fullname {
-  color: #666; }
-  .yui3-aclist-item-active:not(.yui3-aclist-item-hover) .search-result .fullname {
-    color: #eee; }
-
-/*# sourceMappingURL=styles.css.map */
+.ucla-search{display:inline-block}.ucla-search .yui3-aclist{position:relative;display:inline-block}#browsebymain .ucla-search .yui3-aclist{position:absolute}.ucla-search .yui3-aclist-list{border:1px solid #eee;border-top:0;border-bottom:0;text-align:left}.ucla-search .yui3-aclist-content{box-shadow:0 0 0;border:0}.ucla-search .input-group{margin-top:4px}#browsebymain .ucla-search{width:100%;padding:0 15%}.pagelayout-frontpage .ucla-search{width:100%;text-align:center}.pagelayout-frontpage .ucla-search label{font-weight:300}#ucla-search,#ucla-search-block{width:100%;margin-top:4px;-moz-border-radius:0;-webkit-border-radius:0;border-radius:0}.search-result .shortname{font-weight:bold}.yui3-aclist-item-active.yui3-aclist-item-hover .search-result .shortname{color:#444}.search-result .fullname{color:#666}.yui3-aclist-item-active:not(.yui3-aclist-item-hover) .search-result .fullname{color:#eee}
